--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,25 @@ jobs:
     steps:
       - name: checkout Repository
         uses: actions/checkout@v2
-      - name: Setup JDK 1.8
-        uses: actions/setup-java@v1
+        
+      - name: Set up JDK 11 for x64
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8
-          server-id: github
-          settings-path: ${{ github.workspace }}
+          java-version: '11'
+          distribution: 'adopt'
+          architecture: x64
+      
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn --batch-mode --update-snapshots package
+        
+      # - name: Setup JDK 1.8
+      #  uses: actions/setup-java@v1
+      #  with:
+      #    java-version: 1.8
+      #    server-id: github
+      #    settings-path: ${{ github.workspace }}
+      #- name: Build with Maven
+      #  run: mvn clean package -DskipTests
       - name: Setup Google Cloud CLI
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@0.1.3
         env:
